--- a/templates/index.html
+++ b/templates/index.html
@@ -158,7 +158,8 @@
             <h1>Track Productivity, Boost Efficiency</h1>
             <p>Real-time monitoring of employee activities with seamless data visualization.</p>
             <div class="hero-buttons">
-                <a href="/login" class="btn">Employee Login</a>
+                <!-- <a href="/login" class="btn">Employee Login</a> -->
+                <a href="/manual-login" class="btn">Employee Login</a>
                 <a href="/admin-login" class="btn">Admin Login</a>
             </div>
         </div>
