--- a/templates/employee_dashboard.html
+++ b/templates/employee_dashboard.html
@@ -270,7 +270,13 @@
 
         // Stop recording
         document.getElementById('stop-rec-btn').addEventListener('click', function () {
-            fetch('/stop-recording', { method: 'POST' })
+            console.log('Stop recording clicked');
+            let totalPhoneUsageTime = 10;
+            fetch('/stop-recording', {
+                 method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },    
+                    body: JSON.stringify({ phone_usage_time: totalPhoneUsageTime})                
+                 })
                 .then(response => {
                     if (response.ok) {
                         alert('Recording stopped successfully!');
