start meeting route

--- a/templates/employee_dashboard.html
+++ b/templates/employee_dashboard.html
@@ -200,6 +200,7 @@
                 <h3>Meeting</h3>
                 <div class="timer" id="meeting-timer">00:00</div>
                 <button class="btn" id="meeting-btn">Start Meeting</button>
+                <button class="btn" id="stop-meeting-btn">Stop Meeting</button>
             </div>
 
             <!-- Lunch Card -->
@@ -382,8 +383,6 @@
                     }
                 });
         });
-
-
 
 
         // Timer functions
