--- a/templates/employee_dashboard.html
+++ b/templates/employee_dashboard.html
@@ -273,7 +273,7 @@
         document.getElementById('stop-rec-btn').addEventListener('click', function () {
             console.log('Stop recording clicked');
             let totalPhoneUsageTime = 10;
-            fetch('/stop-recording', { method: 'POST'})
+            fetch('/stop-recording', { method: 'POST' })
                 .then(response => {
                     if (response.ok) {
                         alert('Recording stopped successfully!');
@@ -324,6 +324,25 @@
                 });
         });
 
+        // Function to stop the meeting
+        document.getElementById('stop-meeting-btn').addEventListener('click', function () {
+            console.log('Stop meeting clicked');
+
+            // Fetch call to stop the meeting
+            fetch('/stop-meeting', {
+                method: 'POST'})
+                .then(response => {
+                    if (response.ok) {
+                        alert('Meeting recording stopped successfully!');
+                        stopTimer('meeting-timer'); // Stop recording timer
+                    } else {
+                        alert('Error stopping meeting:' + response.statusText);
+                }})
+                .catch(error => {
+                    console.error('Error during fetch:', error);
+                    alert(error.message); // Show error message
+                });
+        });
         // Lunch break modal----------------------------------------
         const lunchBtn = document.getElementById('lunch-btn');
         const lunchModal = document.getElementById('lunch-modal');
